[metadata]
name = Reddit-Oauth
version = 0.1
description = A simple python library to perform the OAuth code flow for Reddit
url = https://github.com/ToxicFrazzles/Reddit-Oauth
author = ToxicFrazzles
licence = MIT

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    requests